# otterlang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TASK_RUNTIME_TODO.md  flake.nix  justfile  plan.md  roadmap.md  setup.ps1  structure.md
.github/workflows/: ci.yml  release.yml
crates/cache/: Cargo.toml
crates/fmt/: Cargo.toml
crates/otterc_ast/: Cargo.toml
crates/otterc_cache/: Cargo.toml
crates/otterc_ffi/: Cargo.toml
crates/otterc_fmt/: Cargo.toml
crates/otterc_language/: Cargo.toml
crates/otterc_lexer/: Cargo.toml
crates/otterc_module/: Cargo.toml
crates/otterc_parser/: Cargo.toml
crates/otterc_runtime/: Cargo.toml
crates/otterc_runtime/src/: config.rs  introspection.rs  jit_stubs.rs  lib.rs  strings.rs  version.rs
crates/otterc_runtime/src/ffi/: dynamic.rs  exports.rs  mod.rs  providers.rs
crates/otterc_runtime/src/memory/: gc.rs  profiler.rs
crates/otterc_runtime/src/stdlib/: builtins.rs  enums.rs  exceptions.rs  fmt.rs  http.rs  io.rs  json.rs  math.rs  net.rs  rand.rs  runtime.rs  sync.rs  sys.rs  task.rs  test.rs  time.rs  yaml.rs
crates/otterc_runtime/src/task/: scheduler.rs  task_impl.rs
crates/otterc_span/: Cargo.toml
crates/otterc_symbols/: Cargo.toml
crates/otterc_typecheck/: Cargo.toml
crates/otterc_typecheck/src/: checker.rs  diagnostics.rs  lib.rs  types.rs  workspace.rs
crates/otterc_utils/: Cargo.toml
docs/: API_REFERENCE.md  CLI.md  EXAMPLES.md  GETTING_STARTED.md  INSTALLATION.md  LANGUAGE_SPEC.md  ROADMAP.md  TUTORIALS.md  WEBASSEMBLY.md
examples/: ffi_test.otter  hello.otter  pi_benchmark.otter  pi_leibniz.c  pi_leibniz.otter  pi_leibniz.rs  simple_generic.otter  task_benchmark_simple.otter
examples/basic/: enum_demo.ot  exception_resource.ot  exception_validation.ot  http_get_test2.ot  http_head_test.ot  http_request.ot  http_test.ot  https_test.ot  sqrt_approx.ot  task_benchmark.ot  yaml_demo.ot
ffi/otterlang_ffi_demo/: Cargo.toml
src/: cli.rs  lib.rs  main.rs
src/ast/: nodes.rs
src/cache/: manager.rs  metadata.rs  mod.rs  path.rs
tests/: await_values.ot  cache_tests.rs  codegen_debug.ot  ffi_tests.rs  lexer_tests.rs  map_iteration.ot  match_guards.ot  parser_tests.rs  performance_tests.rs  stdlib_tests.rs  task_runtime.rs
(+121 files in other folders)
