[package]
name = "otterlang"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ariadne = "0.3"
abi_stable = "0.11"
ahash = "0.8"
cargo_metadata = "0.18"
chrono = { version = "0.4", features = ["serde"] }
chumsky = "0.9"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
directories = "5.0"
duct = "0.13"
once_cell = "1.19"
inventory = "0.3"
indicatif = "0.17"
inkwell = { version = "0.2", features = ["llvm15-0"] }
libloading = "0.8"
libm = "0.2"
memmap2 = "0.9"
parking_lot = "0.12"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha1 = "0.10"
sysinfo = "0.30"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.10"
