[package]
name = "otterc_runtime"
version = "0.1.0"
edition = "2024"

[features]
default = []
task-runtime = []
toml-config = ["dep:toml"]
ffi-main = []

[dependencies]
otterc_symbols.path = "../otterc_symbols"
otterc_ast.path = "../otterc_ast"
otterc_cache.path = "../otterc_cache"

abi_stable = "0.11"
ahash = "0.8"
anyhow = "1.0"
cargo_metadata = "0.18"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
duct = "0.13"
inventory = "0.3"
libloading = "0.8"
libm = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
sysinfo = "0.30"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
toml = { version = "0.8", optional = true }
tracing = "0.1"
ureq = { version = "2", default-features = true }

